--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </section>
 
-    <section class=>
+    <section>
       <div class="profile-name">
           <div>
             <p class="name">Victor Crest</p>
